@@ -149,6 +149,7 @@ Bug Fixes
   over xmlrpc. (RBL-3885)
 * Package creator now works with external products that require entitlements
   for access. (RBL-3956)
+* Better handling of undefined image types for a given platform. (RBL-3965)
 
 Changes in 4.1.3:
 ================
